[package]
name = "xe621"
version = "0.6.0"
authors = ["nasso <nassomails@gmail.com>", "Xe <me@christine.website>"]
edition = "2018"
description = "Rust crate for the E621 API (a large online archive of furry art)."
repository = "https://github.com/Xe-forks/rs621"
readme = "README.md"
keywords = ["e621", "e926", "furry", "api", "client"]
categories = ["api-bindings"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = "1.7.1"
urlencoding = "1.0.0"
chrono = "0.4.9"
serde_json = "1.0.40"
reqwest = "0.9.20"

[dev-dependencies]
mockito = "0.20.0"
